<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/gradient_blue"
    android:orientation="vertical"
    android:padding="30dp">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="CGum "
        android:textColor="@color/lightBlue2"
        android:textSize="50sp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/lightBlue"
        android:layout_marginTop="1dp"
        />

    <TextView
        android:id="@+id/hola"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/aclonica"
        android:text="Konnichiwa,"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        android:transitionName="hola_trans" />
    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/aclonica"
        android:text="Welcome To CGum"
        android:shadowColor="@color/lightBlue2"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="9"
        android:textColor="@color/lightBlue2"
        android:textSize="22sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:paddingTop="10dp"
            android:textColorHint="@color/lightBlue"
            app:boxStrokeColor="@color/lightBlue"
            app:boxStrokeWidthFocused="2dp"
            app:counterTextColor="@color/lightBlue2"
            app:hintTextColor="@color/lightBlue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailT"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:paddingTop="10dp"
            android:textColorHint="@color/lightBlue"
            app:boxStrokeColor="@color/lightBlue"
            app:boxStrokeWidthFocused="2dp"
            app:counterTextColor="@color/lightBlue"
            app:hintTextColor="@color/lightBlue"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/lightBlue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passT"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:textColor="@color/white"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/lightBlue"
            android:drawableEnd="@drawable/arrow_smaller"
            android:drawableTint="@color/white"
            android:padding="10dp"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/aclonica"
            android:text="       Login"
            app:cornerRadius="7dp" />

        <Button
            android:id="@+id/reg"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp"
            android:backgroundTint="#00000000"
            android:fontFamily="@font/aclonica"
            android:gravity="center"
            android:textColor="@color/lightBlue2"
            android:text="Create Account"
            app:cornerRadius="7dp"
            app:strokeColor="#2196F3"
            app:strokeWidth="2dp" />
    </LinearLayout>

</LinearLayout>