<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/darkBlue"
    tools:context=".Post_tab">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/aclonica"
            android:text="Share Your Knowledge"
            android:paddingStart="15dp"
            android:textSize="24sp"
            android:shadowColor="@color/lightBlue2"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="9"
            android:textColor="@color/lightBlue3"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pTitle"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Add Title"
            android:paddingVertical="7dp"
            android:textColorHint="@color/lightBlue"
            app:boxStrokeColor="@color/lightBlue"
            app:boxStrokeWidthFocused="2dp"
            app:counterTextColor="@color/lightBlue2"
            android:layout_marginTop="10dp"
            app:hintTextColor="@color/lightBlue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pTitleT"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pDescr"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Add Description"
            android:paddingVertical="7dp"
            android:textColorHint="@color/lightBlue"
            app:boxStrokeColor="@color/lightBlue"
            app:boxStrokeWidthFocused="2dp"
            app:counterTextColor="@color/lightBlue2"
            app:hintTextColor="@color/lightBlue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pDescrT"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:textColor="@color/white"
                android:inputType="textMultiLine"
                android:gravity="top"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pTags"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Add Tags"
            android:paddingVertical="7dp"
            android:textColorHint="@color/lightBlue"
            app:boxStrokeColor="@color/lightBlue"
            app:boxStrokeWidthFocused="2dp"
            app:counterTextColor="@color/lightBlue2"
            app:hintTextColor="@color/lightBlue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pTagsT"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/pPost"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/lightBlue"
            android:drawableEnd="@drawable/arrow_smaller"
            android:drawableTint="@color/white"
            android:padding="10dp"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/aclonica"
            android:text="       Post"
            app:cornerRadius="7dp" />
    </LinearLayout>
</FrameLayout>